force-app/main/default/objects/OA_Revenue_Forecast__c/OA_Revenue_Forecast__c.object-meta.xml
<CustomObject>
    <description>Custom field to capture revenue forecast. OLI cannot be used as the  user can submit forecast for multiple years and the same needs to be reported sepratly</description>
    <label>Revenue Forecast</label>
    <nameField>
        <displayFormat>RF-{0000000}</displayFormat>
        <label>Revenue Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Forecast</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>