force-app/main/default/objects/OA_Revenue_Forecast__c/fields/OA_Comment__c.field-meta.xml
<CustomField>
    <fullName>OA_Comment__c</fullName>
    <label>Comment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>