force-app/main/default/objects/OA_Revenue_Forecast__c/fields/OA_Forecast_Month__c.field-meta.xml
<CustomField>
    <fullName>OA_Forecast_Month__c</fullName>
    <description>Field created for reporting purpose ONLY</description>
    <formula>DATE(VALUE(TEXT(OA_Year__c)), VALUE(TEXT(CASE(OA_Month__c, &quot;1&quot;, 01, &quot;2&quot;, 02, &quot;3&quot;, 03, &quot;4&quot;, 04, &quot;5&quot;, 05, &quot;6&quot;, 06, &quot;7&quot;, 07, &quot;8&quot;, 08, &quot;9&quot;, 09, &quot;10&quot;, 10, &quot;11&quot;, 11, &quot;12&quot;, 12, 0))) ,Value(TEXT(1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Month</label>
    <type>Date</type>
</CustomField>