force-app/main/default/objects/OA_Revenue_Forecast__c/fields/OA_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>OA_Invoice_Amount__c</fullName>
    <label>Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>