force-app/main/default/objects/OA_Revenue_Forecast__c/fields/OA_Month__c.field-meta.xml
<CustomField>
    <fullName>OA_Month__c</fullName>
    <label>Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Month</valueSetName>
    </valueSet>
</CustomField>