force-app/main/default/objects/OA_Revenue_Forecast__c/fields/OA_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>OA_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Revenue Forecast</relationshipLabel>
    <relationshipName>OA_Revenue_Forecasts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>