force-app/main/default/objects/OA_Revenue_Forecast__c/fields/OA_Percentage_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>OA_Percentage_Invoiced__c</fullName>
    <label>Percentage Invoiced</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>