force-app/main/default/objects/OA_Revenue_Forecast__c/fields/OA_Previous_Sales_Revenue__c.field-meta.xml
<CustomField>
    <fullName>OA_Previous_Sales_Revenue__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total Sales Revenue, prior to the current Change Request</inlineHelpText>
    <label>Previous Sales Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>