force-app/main/default/objects/OA_Revenue_Forecast__c/fields/OA_Probability__c.field-meta.xml
<CustomField>
    <fullName>OA_Probability__c</fullName>
    <formula>OA_Opportunity__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>