force-app/main/default/objects/OA_Revenue_Forecast__c/fields/OA_Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>OA_Project_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used in Approval Process, to assign Delivery Forecast for approval.</description>
    <label>Project Owner (Not for layout)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Revenue_Forecast</relationshipName>
    <type>Lookup</type>
</CustomField>