force-app/main/default/objects/OA_Revenue_Forecast__c/fields/OA_Revenue_Flow__c.field-meta.xml
<CustomField>
    <fullName>OA_Revenue_Flow__c</fullName>
    <label>Revenue Flow</label>
    <length>10</length>
    <type>Text</type>
</CustomField>