force-app/main/default/objects/OA_Revenue_Forecast__c/fields/OA_Revenue_Recognized_Fin__c.field-meta.xml
<CustomField>
    <fullName>OA_Revenue_Recognized_Fin__c</fullName>
    <description>This field will be updated by Fin Team Only. and will be used for board report</description>
    <label>Revenue Recognized (Fin)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>