force-app/main/default/objects/OA_Revenue_Forecast__c/fields/OA_Risk_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>OA_Risk_Adjusted__c</fullName>
    <formula>OA_Sales_Revenue__c *  OA_Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Adjusted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>