force-app/main/default/objects/OA_Revenue_Forecast__c/fields/OA_Sales_Revenue__c.field-meta.xml
<CustomField>
    <fullName>OA_Sales_Revenue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Forecasted monthly revenue</description>
    <label>Sales Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>