force-app/main/default/objects/OA_Revenue_Forecast__c/fields/OA_Status__c.field-meta.xml
<CustomField>
    <fullName>OA_Status__c</fullName>
    <description>Status of Delivery and Invoicing Milestones</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>Delivery In Progress</fullName>
            </value>
            <value>
                <fullName>Delivery Completed</fullName>
            </value>
            <value>
                <fullName>Invoice Approval Pending</fullName>
            </value>
            <value>
                <fullName>Invoice Rejected</fullName>
            </value>
            <value>
                <fullName>Invoice Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>