force-app/main/default/objects/OA_Revenue_Forecast__c/fields/OA_Total_Sales_Revenue_Incl_CRs__c.field-meta.xml
<CustomField>
    <fullName>OA_Total_Sales_Revenue_Incl_CRs__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total Sales Revenue including the changes via various CRs</inlineHelpText>
    <label>Total Sales Revenue (Incl CRs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>