force-app/main/default/objects/OA_Revenue_Forecast__c/fields/OA_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>OA_Unique_Identifier__c</fullName>
    <description>This field is updated by workflow. Unique Identifier for milestones. Concatenation of Opportunity Id, RecordTypeId, Month and Year.</description>
    <externalId>true</externalId>
    <label>Unique Identifier(Not for layout)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>