force-app/main/default/objects/OA_Revenue_Forecast__c/recordTypes/Delivery.recordType-meta.xml
<RecordType>
    <fullName>Delivery</fullName>
    <active>true</active>
    <label>Delivery Milestone</label>
</RecordType>