force-app/main/default/objects/OA_Revenue_Forecast__c/recordTypes/Invoice.recordType-meta.xml
<RecordType>
    <fullName>Invoice</fullName>
    <active>true</active>
    <label>Invoice Milestone</label>
</RecordType>