force-app/main/default/objects/OA_Revenue_Forecast__c/validationRules/After_Opportunity_Closed_won.validationRule-meta.xml
<ValidationRule>
    <fullName>After_Opportunity_Closed_won</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(OA_Opportunity__r.StageName , &#39;Closed Won&#39;),
    OR(ISCHANGED(OA_Comment__c),
       ISCHANGED(OA_Month__c),
       ISCHANGED(OA_Opportunity__c),
       ISCHANGED(OA_Percentage_Invoiced__c),
       ISCHANGED(OA_Previous_Sales_Revenue__c),
       ISCHANGED(OA_Sales_Revenue__c),
       ISCHANGED(OA_Total_Sales_Revenue_Incl_CRs__c),
       ISCHANGED(OA_Year__c)
      )
)</errorConditionFormula>
    <errorMessage>Cannot modify when opportunity is closed won.</errorMessage>
</ValidationRule>