force-app/main/default/objects/OA_Revenue_Forecast__c/validationRules/Status_Change_After_Opp_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Change_After_Opp_Closed_Won</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &#39;Delivery&#39; &amp;&amp;
ISCHANGED(OA_Status__c) &amp;&amp; ISPICKVAL(OA_Opportunity__r.StageName,&#39;Closed Won&#39; ) &amp;&amp; NOT(  
   ( ISPICKVAL(OA_Status__c,&#39;Delivery In Progress&#39;) 
   &amp;&amp; TEXT(PRIORVALUE(OA_Status__c)) = &#39;Planned&#39;)
   || 
   ( ISPICKVAL(OA_Status__c,&#39;Delivery Completed&#39;)
   &amp;&amp; TEXT(PRIORVALUE(OA_Status__c)) = &#39;Delivery In Progress&#39;
   )
   )</errorConditionFormula>
    <errorMessage>Status flow for Revenue forecast when Opportunity is Closed Won is:
Planned &gt; Deliver In Progress &gt; Delivered</errorMessage>
</ValidationRule>